minor fix for dark mode

--- a/styles/main.css
+++ b/styles/main.css
@@ -291,7 +291,7 @@ ul {
 }
 
 .footer p {
-    color: #000;
+    color: var(--emphasis);
 }
 
 .footer .col p {
